--- a/index.html
+++ b/index.html
@@ -128,6 +128,28 @@
             <h1>Publications</h1>
         </div>
       </div>
+
+
+      <!--Open problems -->
+         <div class="row" id="templatemo_publications_LargeScaleBD">
+             <div class="col-md-1"></div>
+             <div class="col-md-5 col-sm-7 col-xs-24">
+                 <img src="projects/equi_sfm/rep.png" width="300" " alt="">
+             </div>
+             <div class="col-md-1"></div>
+             <div class="col-md-16">
+                 <h2>Deep Permutation Equivariant Structure from Motion</h2>
+                 <p>
+                   Dror Moran, Hodaya Koslowsky, Yoni Kasten, Haggai Maron, Meirav Galun, Ronen Basri<br>
+                   <i> Preprint, 2021 </i> <br>
+                 </p>
+                 <a class="btn btn-default abstract" ptitle="Existing deep methods produce highly accurate 3D reconstructions in stereo and multiview stereo settings, i.e., when cameras are both internally and externally calibrated. Nevertheless, the challenge of simultaneous recovery of camera poses and 3D scene structure in multiview settings with deep networks is still outstanding. Inspired by projective factorization for Structure from Motion (SFM) and by deep matrix completion techniques, we propose a neural network architecture that, given a set of point tracks in multiple images of a static scene, recovers both the camera parameters and a (sparse) scene structure by minimizing an unsupervised reprojection loss. Our network architecture is designed to respect the structure of the problem: the sought output is equivariant to permutations of both cameras and scene points. Notably, our method does not require initialization of camera parameters or 3D point locations. We test our architecture in two setups: (1) single scene reconstruction and (2) learning from multiple scenes. Our experiments, conducted on a variety of datasets in both internally calibrated and uncalibrated settings, indicate that our method accurately recovers pose and structure, on par with classical state of the art methods. Additionally, we show that a pre-trained network can be used to reconstruct novel scenes using inexpensive fine-tuning with no loss of accuracy."> Abstract</a>
+                 <a href="https://arxiv.org/pdf/2104.06703.pdf" class="btn btn-default">Paper </a>
+             </div>
+
+      </div><!-- end of row -->
+
+
       <!--Open problems -->
          <div class="row" id="templatemo_publications_LargeScaleBD">
              <div class="col-md-1"></div>
@@ -139,7 +161,7 @@
                  <h2>Position-Agnostic Multi-Microphone Speech Dereverberation</h2>
                  <p>
                    Yochai Yemini, Ethan Fetaya, Haggai Maron, Sharon Gannot<br>
-                   <i> Preprint, 2020 </i> <br>
+                   <i> Preprint, 2021 </i> <br>
                  </p>
                  <a class="btn btn-default abstract" ptitle="Neural networks (NNs) have been widely applied in speech processing tasks, and, in particular, those employing microphone arrays. Nevertheless, most of the existing NN architectures can only deal with fixed and position-specific microphones arrays. In this paper, we present an NN architecture that is able to cope with microphone arrays on which no prior knowledge is presumed, and demonstrate its applicability on the speech dereverberation problem. To this end, our approach harnesses recent advances in the Deep Sets framework \cite{zaheer,sets} to design an architecture that enhances the reveberant log-spectrum. We provide a setup for training and testing such a network. Our experiments, using REVERB challenge datasets,  show that the proposed position-agnostic setup performs comparably with the position-aware framework and sometimes slightly better, even with less microphones. In addition, it substantially improves performance over the closest single microphone architecture. "> Abstract</a>
                  <a href="https://arxiv.org/pdf/2010.11875.pdf" class="btn btn-default">Paper </a>
@@ -159,7 +181,7 @@
                <h2>From Local Structures to Size Generalization in Graph Neural Networks</h2>
                <p>
                  Gilad Yehudai, Ethan Fetaya, Eli Meirom, Gal Chechik, Haggai Maron<br>
-                 <i> Preprint, 2020 </i> <br>
+                 <i> Preprint, 2021 </i> <br>
                </p>
                <a class="btn btn-default abstract" ptitle="Graph neural networks (GNNs) can process graphs of different sizes but their capacity to generalize across sizes is still not well understood. Size generalization is key to numerous GNN applications, from solving combinatorial optimization problems to learning in molecular biology. In such problems, obtaining labels and training on large graphs can be prohibitively expensive, but training on smaller graphs is possible.
 This paper puts forward the size-generalization question and characterizes important aspects of that problem theoretically and empirically. We show that even for very simple tasks, GNNs do not naturally generalize to graphs of larger size. Instead, their generalization performance is closely related to the distribution of patterns of connectivity and features and how that distribution changes from small to large graphs. Specifically, we show that in many cases, there are GNNs that can perfectly solve a task on small graphs but generalize poorly to large graphs and that these GNNs are encountered in practice. We then formalize size generalization as a domain-adaption problem and describe two learning setups where size generalization can be improved. First, as a self-supervised learning problem (SSL) over the target domain of large graphs. Second, as a semi-supervised learning problem when few samples are available in the target domain. We demonstrate the efficacy of these solutions on a diverse set of benchmark graph datasets."> Abstract</a>
@@ -178,10 +200,10 @@ This paper puts forward the size-generalization question and characterizes impor
        </div>
        <div class="col-md-1"></div>
        <div class="col-md-16">
-           <h2>How to Stop Epidemics: Controlling Graph Dynamics with Reinforcement Learning and Graph Neural Networks</h2>
+           <h2>Controlling Graph Dynamics with Reinforcement Learning and Graph Neural Networks</h2>
            <p>
             Eli A Meirom, Haggai Maron, Shie Mannor, Gal Chechik<br>
-             <i> Preprint, 2020 </i> <br>
+             <i> Preprint, 2021 </i> <br>
            </p>
            <a class="btn btn-default abstract" ptitle="We consider the problem of monitoring and controlling a partially-observed dynamic process that spreads over a graph. This problem naturally arises in contexts such as scheduling virus tests or quarantining individuals to curb a spreading epidemic; detecting fake news spreading on online networks by manually inspecting posted articles; and targeted marketing where the objective is to encourage the spread of a product. Curbing the spread and constraining the fraction of infected population becomes challenging when only a fraction of the population can be tested or quarantined.
 To address this challenge, we formulate this setup as a sequential decision problem over a graph. In face of an exponential state space, combinatorial action space and partial observability, we design RLGN, a novel tractable Reinforcement Learning (RL) scheme to prioritize which nodes should be tested, using Graph Neural Networks (GNNs) to rank the graph nodes. We evaluate this approach in three types of social-networks: community-structured, preferential attachment, and based on statistics from real cellular tracking. RLGN consistently outperforms all baselines in our experiments. It suggests that prioritizing tests using RL on temporal graphs can increase the number of healthy people by 25% and contain the epidemic 30% more often than supervised approaches and 2.5X more often than non-learned baselines using the same resources."> Abstract</a>
